[package]
name = "uy"
version = "0.1.1"
edition = "2021"
authors = ["Lachlan Sneff <lachlan@hyperturing.com>"]
description = "A typesafe, flexible, simple, and user-friendly unit system library for Rust that has good error messages."
readme = "README.md"
repository = "https://github.com/lachlansneff/uy"
license = "MIT"
keywords = ["units", "unit", "dimensions", "unit-system", "si"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.14"
typenum = "1.16.0"
